# kite_fem

./: .gitignore  LICENSE.md  README.md  README_dev.md  citation.cff  pyproject.toml
Cantilever/: FEM_cantilever.py  PSM_Cantilever2D.py  PSM_Cantilever3D.py
Cantilever/Figures/: plot.py
Cantilever/Results/: FEM_timoshenko.csv  Literature.csv  PSM2D.csv  PSM3D.csv  plot.py
FEM/: FEMStructure.py  FEM_canopy_nonlinear.py  FEM_pulley.py  FEM_saddle.py
Literature_figures/: DOF.py
PSM/: PSM_Cantilever2D.py  PSM_Cantilever3D.py  PSM_spring.py
Spring/: FEM_canopy_nonlinear.py  FEM_spring.py  FEM_spring_alternative.py  FEM_truss.py  PSM_spring.py
Spring/FEM/: FEMStructure.py  FEM_canopy_nonlinear.py  FEM_kite.py  FEM_noncompressive.py  FEM_pulley.py  FEM_saddle.py  FEM_square.py  SpringElement.py
Spring/other/: FEM_spring_alternative.py  FEM_springs.py  FEM_truss.py  FEM_trusses.py
data/TUDELFT_V3_KITE/: fe_6d.csv  struc_geometry_all_in_surfplan.yaml  struc_geometry_hanging_test.yaml
examples/: FEM_LE_tube  FEM_beam_verification.py  FEM_canopy_nonlinear.py  FEM_canopy_section.py  FEM_cantilever.py  FEM_cantilever_beam.py  FEM_cantilever_inflatable_beam.py  FEM_detailed_kite.py  FEM_kite.py  FEM_noncompressive.py  FEM_pulley.py  FEM_saddle.py  FEM_steel_beam.py  Meshing.py  example_save_load.py  surfaces.py
examples/validation/: Comparedata.py  Hanging_test.py  Plot_case.py  model_results.csv  validation_data.csv
src/kite_fem/: BeamElement.py  FEMStructure.py  Functions.py  MeshBuilder.py  Mesher.py  Plotting.py  SpringElement.py  saveload.py
(+14 files in other folders)
